objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ActiveInactiveNetUnitPrice__c</fullName>
        <description>SFDC1-487 Field to hold salesprice in case opportunity product is inactive</description>
        <inlineHelpText>Sales price for Opportunity product</inlineHelpText>
        <label>Active/Inactive Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActiveInactiveTotalPrice__c</fullName>
        <description>SFDC1-487 Ghost field created for reporting purposes. It holds total price for both active and inactive products</description>
        <formula>ActiveInactiveNetUnitPrice__c  * Quantity</formula>
        <inlineHelpText>Automatically calculated total price for product</inlineHelpText>
        <label>Active/Inactive Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedDiscountAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-7082 Annualized discount amount to be copied over from discount amount</description>
        <inlineHelpText>Annualized discount amount auto calculated by system</inlineHelpText>
        <label>Annualized Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedPrice__c</fullName>
        <description>SFDC1-173 This field holds the annualized price. Entered by the rep.</description>
        <inlineHelpText>Annualized Price</inlineHelpText>
        <label>Annualized Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedTotalAmount__c</fullName>
        <description>SFDC1-7082 Annualized Total Amount calculated field</description>
        <formula>(( AnnualizedUnitPrice__c - AnnualizedDiscountAmount__c )*Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates total amount using AnnualizedUnitPrice , AnnualizedDiscountAmount and Quantity</inlineHelpText>
        <label>Annualized Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedUnitPrice__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-7082 annualized unit price for subscription products</description>
        <inlineHelpText>Annualized unit price calculated from unit price automatically</inlineHelpText>
        <label>Annualized Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>US-5101086: add associatedTo in OpportunityProduct object.</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedUsers__c</fullName>
        <description>SFDC1-9306 : This field will have information related to Authorized users</description>
        <inlineHelpText>Enter Authorized users</inlineHelpText>
        <label>Authorized Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCity__c</fullName>
        <label>Bill To : City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToClientName__c</fullName>
        <label>Bill To : Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCompanySAP__c</fullName>
        <label>Bill To : Company SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCountryNew__c</fullName>
        <label>Bill To : Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToPostalZipCode__c</fullName>
        <label>Bill To : Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStateProvince__c</fullName>
        <label>Bill To : State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStreet__c</fullName>
        <label>Bill To : Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCID__c</fullName>
        <description>SFDC1-1832 Custom Collection ID</description>
        <inlineHelpText>Custom Collection ID</inlineHelpText>
        <label>CCID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCQuoteID__c</fullName>
        <description>SFDC1-1832 Custom Collection QuoteID</description>
        <inlineHelpText>Custom Collection QuoteID</inlineHelpText>
        <label>CCQuoteID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIDivision__c</fullName>
        <description>SFDC-5699  : Update rollup information from Global Segment/Internal Business Segment to CIDivision on Opportunity.</description>
        <formula>IF(Text(Status__c)!=&apos;Lost&apos;,
IF(OR(PricebookEntry.Product2.InternalBusinessSegment__c =&apos;Issuer Solutions &amp; Global Insights&apos;, PricebookEntry.Product2.InternalBusinessSegment__c=&apos;Maritime Trade&apos;), &apos;Financial Services&apos;, IF(OR(PricebookEntry.Product2.Division__c =&apos;Financial Services&apos;, PricebookEntry.Product2.Division__c=&apos;Financial Svcs-Info&apos;), &apos;Financial Services&apos;,
IF(PricebookEntry.Product2.Division__c =&apos;Consolidated Markets &amp; Solutions&apos;, &apos;Engineering Solutions&apos;,
IF(PricebookEntry.Product2.Division__c =&apos;Transportation&apos;, &apos;Mobility&apos;,
IF(PricebookEntry.Product2.Division__c =&apos;Resources&apos;,&apos;ENR&apos;, NULL) ) ) ) ), NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-7027: Date field to store Opportunity’s Contract End Date</description>
        <inlineHelpText>Updates to the Contract End Date on the Opportunity will overwrite Contract End Date on the Opportunity Product</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-7027: Date field to store Opportunity’s Contract Start Date</description>
        <inlineHelpText>Updates to the Contract Start Date on the Opportunity will overwrite Contract Start Date on the Opportunity Product</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartQuarter__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Quarter Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF( YEAR(ContractStartDate__c) &gt; 2021,
IF(OR(MONTH(ContractStartDate__c) = 1, MONTH(ContractStartDate__c) = 2, MONTH(ContractStartDate__c) = 3), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(ContractStartDate__c) = 4, MONTH(ContractStartDate__c) = 5, MONTH(ContractStartDate__c) = 6), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(ContractStartDate__c) = 7, MONTH(ContractStartDate__c) = 8, MONTH(ContractStartDate__c) = 9), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(ContractStartDate__c) = 10, MONTH(ContractStartDate__c) = 11, MONTH(ContractStartDate__c) = 12), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q4&apos;,null)))),
IF( YEAR(ContractStartDate__c) &lt; 2022,IF(OR(MONTH(ContractStartDate__c) = 12, MONTH(ContractStartDate__c) = 1, MONTH(ContractStartDate__c) = 2), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(ContractStartDate__c) = 3, MONTH(ContractStartDate__c) = 4, MONTH(ContractStartDate__c) = 5), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(ContractStartDate__c) = 6, MONTH(ContractStartDate__c) = 7, MONTH(ContractStartDate__c) = 8), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(ContractStartDate__c) = 9, MONTH(ContractStartDate__c) = 10, MONTH(ContractStartDate__c) = 11), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q4&apos;,null)))),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartYear__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF(NOT(ISBLANK(ContractStartDate__c)),IF(YEAR(ContractStartDate__c) &lt;= 2021,TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1))),TEXT(YEAR(ContractStartDate__c))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyDescription__c</fullName>
        <description>SFDC-5356 county description for CPT integration to populate for some products</description>
        <inlineHelpText>County description</inlineHelpText>
        <label>County Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPlatform__c</fullName>
        <description>SFDC1-543 : Integration Partner Field for sales ops - petrik 
This data will be used for reporting: closed business, forward looking pipeline and to see which opportunities (full oppy prod details) have revenue share and with who.</description>
        <inlineHelpText>Legacy Markit field, please enter a value</inlineHelpText>
        <label>Delivery Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlackRock Aladdin</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>FactSet</fullName>
                </value>
                <value>
                    <fullName>MSCI</fullName>
                </value>
                <value>
                    <fullName>Snowflake Hosted Account</fullName>
                </value>
                <value>
                    <fullName>Snowflake Reader Account</fullName>
                </value>
                <value>
                    <fullName>Workbench</fullName>
                </value>
                <value>
                    <fullName>Xpressfeed</fullName>
                </value>
                <value>
                    <fullName>CloudMargin</fullName>
                    <isActive>false</isActive>
                    <label>CloudMargin</label>
                </value>
                <value>
                    <fullName>IRESS</fullName>
                    <isActive>false</isActive>
                    <label>IRESS</label>
                </value>
                <value>
                    <fullName>SunGard</fullName>
                    <isActive>false</isActive>
                    <label>SunGard</label>
                </value>
                <value>
                    <fullName>WRDS</fullName>
                    <isActive>false</isActive>
                    <label>WRDS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountOverThreshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4275 Indicates whether the opportunity product has been discounted over threshold</description>
        <inlineHelpText>Checked when product has been discounted over threshold</inlineHelpText>
        <label>Discount Over Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <description>SFDC1-173 Denotes the discount percentage to be applied to the UnitPrice. Used in the pricing calculation customization.</description>
        <inlineHelpText>Please specify the discount percentage to be applied to the Updated List Price. Only required when the Discount Type is set to &quot;Percentage&quot;.</inlineHelpText>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountThreshold__c</fullName>
        <description>SFDC1-4275 Discount threshold flag calculated from product and product schedules</description>
        <formula>IF(
DiscountPercentage__c &gt;  PricebookEntry.Product2.DiscountThreshold__c,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &apos;red&apos;, 30,30) + &quot; This discount is higher than the discount threshold and will trigger an alert to your supervisor once you move the Opportunity into the negotiation stage!&quot;,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &apos;green&apos;, 30,30)
)</formula>
        <inlineHelpText>The flag will set to Red if discount is over discount threshold on the Product</inlineHelpText>
        <label>Discount Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>Specify what, if any, type of discount to be applied to the sales price.</description>
        <inlineHelpText>This field denotes the type of discount that is being applied.</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Discount</fullName>
                    <default>true</default>
                    <label>No Discount</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-173 Denotes the discount amount to be applied to the UnitPrice. Used in the pricing calculation customization.</description>
        <inlineHelpText>Please specify the discount amount to be applied to the Updated List Price. Only required when the Discount Type is set to &quot;Amount&quot;.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedValueOfVariableVolBilling__c</fullName>
        <description>SFDC1-10361 New Field added</description>
        <inlineHelpText>Enter estimated value of this product (mainly used for Variable and Consultancy estimates in reporting)</inlineHelpText>
        <label>Estimated Product Value (Var/Cons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedValueatRisk__c</fullName>
        <inlineHelpText>Holds the estimated value at risk</inlineHelpText>
        <label>Estimated Value at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedFirstYearValue__c</fullName>
        <description>SFDC-152 calculated by Opportunity Probability * Opportunity Product First Year Value</description>
        <formula>Opportunity.Probability * FirstYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Opportunity Probability * Opportunity Product First Year Value</inlineHelpText>
        <label>Expected First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstYear__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-905 This fields holds the first year price for opportunity line items</description>
        <inlineHelpText>First Year Value</inlineHelpText>
        <label>First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPJurisdiction__c</fullName>
        <description>SFDC1-215. Contains the Tax Country field pulled in from the product. Complies with the US Supreme Court Wayfair Decision and Tax Reform Act effective Jan. 1, 2019. 
SFDC-723. Renamed and replaced the fields.</description>
        <formula>PricebookEntry.Product2.IPJurisdiction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Complies with the US Supreme Court Wayfair Decision and Tax Reform Act effective Jan. 1, 2019.</inlineHelpText>
        <label>IP Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationPartnerRevenueShare__c</fullName>
        <description>SFDC1-543 : Integration Partner Field for sales ops - petrik
This data will be used for reporting: closed business, forward looking pipeline and to see which opportunities (full oppy prod details) have revenue share and with who.
SFDC1-8427: Added picklist value</description>
        <inlineHelpText>Legacy Markit field, please enter a value</inlineHelpText>
        <label>Integration Partner/Revenue Share</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascendant Compliance Management</fullName>
                </value>
                <value>
                    <fullName>BlackRock Aladdin</fullName>
                </value>
                <value>
                    <fullName>CloudMargin</fullName>
                </value>
                <value>
                    <fullName>Compliance Solutions Strategies</fullName>
                </value>
                <value>
                    <fullName>Comyno</fullName>
                </value>
                <value>
                    <fullName>IRESS</fullName>
                </value>
                <value>
                    <fullName>Simplitium</fullName>
                </value>
                <value>
                    <fullName>SunGard</fullName>
                </value>
                <value>
                    <fullName>WRDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsProRated__c</fullName>
        <description>SFDC1-7082 flag to determine if the underlying product is pro-rated or not</description>
        <inlineHelpText>Internal Flag to handle pro-ration of subscription products</inlineHelpText>
        <label>Is Pro-Rated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsProductatRisk__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Is Product at Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id referencing the source record and is populated via migration</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the reference to the source record populated via migration</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LicenseNumber__c</fullName>
        <description>SFDC1-4689 License Number is a field on the Opportunity Product Detail. The field is Editable on New Business opportunities, and is Read Only for Renewals. It is populated by the Renewal Integration.
When the Contract is created the License Number from the Opportunity Product Detail should be sent to the License Number on the Contract Product Line item.</description>
        <inlineHelpText>Actual license number for a customer to access a sold product</inlineHelpText>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <description>SFDC1-4327 : Additional fields for Opportunity Product Detail - License Type</description>
        <inlineHelpText>Please enter the contracted license type with the customer</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer License</fullName>
                </value>
                <value>
                    <fullName>Departmental License</fullName>
                </value>
                <value>
                    <fullName>Divisional License</fullName>
                </value>
                <value>
                    <fullName>Enterprise Wide License</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>One Time License</fullName>
                </value>
                <value>
                    <fullName>Site License</fullName>
                </value>
                <value>
                    <fullName>Standalone License</fullName>
                </value>
                <value>
                    <fullName>User License</fullName>
                </value>
                <value>
                    <fullName>Client License</fullName>
                    <isActive>false</isActive>
                    <label>Client License</label>
                </value>
                <value>
                    <fullName>Departmental</fullName>
                    <isActive>false</isActive>
                    <label>Departmental</label>
                </value>
                <value>
                    <fullName>Site(s)</fullName>
                    <isActive>false</isActive>
                    <label>Site(s)</label>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                    <isActive>false</isActive>
                    <label>Standalone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>SFDC1-173 Currency Field populated with the List Price from the Price Book at when a Product is added to an Opportunity. Used in customization for Pricing and Discounting.</description>
        <inlineHelpText>First Year Price Book List Price from Product Schedules</inlineHelpText>
        <label>PriceBook List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ListPriceformula__c</fullName>
        <description>SFDC1-7845 This field holds the List Price Field on Opportunity Product</description>
        <formula>IF(ListPrice__c&lt;&gt;0,  ListPrice__c , PricingOpsListUnitPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The List price from the price book or provided through the renewal process</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <description>SFDC1-173 This formula field pulls in the material code from the related product.</description>
        <formula>PricebookEntry.Product2.MaterialCode__c</formula>
        <inlineHelpText>Material Code from Product Master</inlineHelpText>
        <label>Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumFeeValue__c</fullName>
        <description>SFDC-1784: Minimum Fee Value on Opp Product</description>
        <inlineHelpText>Enter the annual minimum fixed fee value for this product.</inlineHelpText>
        <label>zzzMinimum Fixed Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofConcurrentUsersSeats__c</fullName>
        <description>SFDC1-4327 : Additional fields for Opportunity Product Detail - Number of Concurrent Users/Seats</description>
        <inlineHelpText>Number of unique users or concurrent users licensed to access purchased product (supports pricing and licensing)</inlineHelpText>
        <label>Number of Concurrent Users/Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocationsSites__c</fullName>
        <description>SFDC1-4327 : Additional fields for Opportunity Product Detail - Number of Locations/Sites</description>
        <inlineHelpText>Number of locations licensed to access purchased product (supports pricing and licensing)</inlineHelpText>
        <label>Number of Locations/Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPotentialUsers__c</fullName>
        <description>SFDC1-4327 : Additional fields for Opportunity Product Detail - Number of Potential Users</description>
        <inlineHelpText>Number of potential users licensed to access purchased product (supports pricing and licensing)</inlineHelpText>
        <label>Number of Potential Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityProductID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityProductID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <description>SFDC-660 This field is calculated by triggers - to store the Opportunity&apos;s Stage and used in the Sales Classification formula fields for Opportunity Product (we need this field because Salesforce doesn&apos;t allow circular references)</description>
        <inlineHelpText>This field is populated from Opportunity&apos;s Stage</inlineHelpText>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDOppLine__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>OpL{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>System generated Id in salesforce used for data migration purposes</inlineHelpText>
        <label>PKID Opp Line</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PassThroughRoyaltyAnnualValue__c</fullName>
        <description>SFDC-3330: to indicate on oppy products that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Pass-through/Royalty Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceChangePercentage__c</fullName>
        <description>SFDC-3187 price change formula field for price increase auto renewal opportunities. This for reporting purposes to report on high percent change renewals</description>
        <formula>IF(( PriorYearTotalSalesPrice__c - ListPrice__c)&lt;&gt;0,((PriorYearTotalSalesPrice__c - ListPrice__c)/ListPrice__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is for reporting purposes for Price Increase auto-renewals</inlineHelpText>
        <label>Price Change (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceReasonCode__c</fullName>
        <description>SFDC1-292 Price reason code to track who and what updated the price</description>
        <inlineHelpText>Only populated on Renewals represents the status of the pricing fields on a renewal opportunity line - description on worksheet in this document</inlineHelpText>
        <label>Price Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingOpsListUnitPrice__c</fullName>
        <description>SFDC1-7650 New Pricing Fields on the Opportunity Product</description>
        <inlineHelpText>List price updated from Pricing Ops through the renewal process</inlineHelpText>
        <label>Pricing Ops List Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-5500: This field will indicate if the product for the current opportunity legal entity on opportunity has been approved by the Tax team.</description>
        <label>Prior Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorPassthroughRoyaltyAnnualValue__c</fullName>
        <description>SFDC-3913: to indicate on oppy products that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Prior Pass-through/Royalty Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearDiscountPrice__c</fullName>
        <description>SFDC1-8201;Prior Year Discount field needed on the Opportunity Product</description>
        <inlineHelpText>Populated by SAP</inlineHelpText>
        <label>Prior Year Discount Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearLicenseType__c</fullName>
        <description>SFDC1-7847: Text field for displaying prior year license type information</description>
        <inlineHelpText>License type used for the prior year contract</inlineHelpText>
        <label>Prior Year License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearNetUnitPrice__c</fullName>
        <description>SFDC1-7847: Currency field for displaying Prior year net unit price</description>
        <inlineHelpText>Prior year net unit based on the list unit minus unit discount</inlineHelpText>
        <label>Prior Year Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearNumberOfConcurrentUsersSeats__c</fullName>
        <description>SFDC1-7847: Text field for number of concurrent users/seats during prior year</description>
        <inlineHelpText>Prior Year Number of Concurrent Users/Seats</inlineHelpText>
        <label>Prior Year Num of Concurrent Users/Seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearNumberOfLocationsSites__c</fullName>
        <description>SFDC1-7847: Text field for displaying Number of Locations/Sites during prior year</description>
        <inlineHelpText>Prior Year Number of Locations/Sites</inlineHelpText>
        <label>Prior Year Number of Locations/Sites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>